# Linexin-Hello

./: PKGBUILD  README.md  pyproject.toml
src/usr/share/linexin/widgets/: z-linexin-hello-widget.py
src/usr/share/linexin/widgets/localization/de_DE/: linexin_hello_dictionary.py
src/usr/share/linexin/widgets/localization/en_US/: linexin_hello_dictionary.py
src/usr/share/linexin/widgets/localization/es_ES/: linexin_hello_dictionary.py
src/usr/share/linexin/widgets/localization/fr_FR/: linexin_hello_dictionary.py
src/usr/share/linexin/widgets/localization/hi_IN/: linexin_hello_dictionary.py
src/usr/share/linexin/widgets/localization/pl_PL/: linexin_hello_dictionary.py
src/usr/share/linexin/widgets/localization/pt_BR/: linexin_hello_dictionary.py
src/usr/share/linexin/widgets/localization/pt_PT/: linexin_hello_dictionary.py
src/usr/share/linexin/widgets/localization/ru_RU/: linexin_hello_dictionary.py
src/usr/share/linexin/widgets/localization/zh_CN/: linexin_hello_dictionary.py
